--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "D": "^1.0.0",
+    "dotenv-webpack": "^6.0.0",
     "i18next": "^19.8.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -45,6 +46,10 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "node-sass": "^5.0.0",
+    "prettier": "^2.1.2"
   }
 }
